Kártyák reszponzivitása elkezdése

--- a/kartyak.html
+++ b/kartyak.html
@@ -42,46 +42,60 @@
                     </select>
                 </div>
             </div>
-            <div class="kartyak">
-                <div class="card">
-                    <img src="./collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
-                    <h1>Collar T-Shirt</h1>
-                    <p class="price">$35.00</p>
+            <div class="row">
+                <div class="kartyak">
+                    <div class="column">
+                        <div class="card">
+                            <img src="./collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
+                            <h1>Collar T-Shirt</h1>
+                            <p class="price">$35.00</p>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="kartyak">
-                <div class="card">
-                    <img src="./collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
-                    <h1>Gents T-shirt</h1>
-                    <p class="price">$35.00</p>
+                <div class="kartyak">
+                    <div class="column">
+                        <div class="card">
+                            <img src="./collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
+                            <h1>Gents T-shirt</h1>
+                            <p class="price">$35.00</p>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="kartyak">
-                <div class="card">
-                    <img src="./collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
-                    <h1>Ladies Hat</h1>
-                    <p class="price">$35.00</p>
+                <div class="kartyak">
+                    <div class="column">
+                        <div class="card">
+                            <img src="./collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
+                            <h1>Ladies Hat</h1>
+                            <p class="price">$35.00</p>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="kartyak">
-                <div class="card">
-                    <img src="./collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
-                    <h1>Collar T-Shirt</h1>
-                    <p class="price">$35.00</p>
+                <div class="kartyak">
+                    <div class="column">
+                        <div class="card">
+                            <img src="./collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
+                            <h1>Collar T-Shirt</h1>
+                            <p class="price">$35.00</p>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="kartyak">
-                <div class="card">
-                    <img src="./collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
-                    <h1>Collar T-Shirt</h1>
-                    <p class="price">$35.00</p>
+                <div class="kartyak">
+                    <div class="column">
+                        <div class="card">
+                            <img src="./collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
+                            <h1>Collar T-Shirt</h1>
+                            <p class="price">$35.00</p>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="kartyak">
-                <div class="card">
-                    <img src="./collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
-                    <h1>Collar T-Shirt</h1>
-                    <p class="price">$35.00</p>
+                <div class="kartyak">
+                    <div class="column">
+                        <div class="card">
+                            <img src="./collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
+                            <h1>Collar T-Shirt</h1>
+                            <p class="price">$35.00</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
