IK-9 Menü és Lábléc reszponzivitása

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <a href="./HTML/myaccount.html" class="menuLinks">my account<span class="menuNyil">▾</span></a>
             <a href="./HTML/blog.html" class="menuLinks">blog</a>
             <a href="./HTML/contact.html" class="menuLinks">contact</a>
+
+            <!--Dropdown itt lesz-->
         </div>
     </div>
 
