Szürök oldalba minden más beleolvasztása

--- a/szurok.html
+++ b/szurok.html
@@ -3,56 +3,150 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TESZT</title>
+    <link rel="stylesheet" href="kartyak.css">
+    <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="szuroterv.css">
+    <title>Shop</title>
 </head>
 <body>
-
-    <div class="szuroDiv">
-        <div class="csuszkaSzuroDiv">
-            <h2>Filter by price</h2>
+    <div class="felsoLec">
+        <div class="webName">
+            <p class="oldalnev">Csudajó Áruház</p>
+            <p class="motto">Itt még romániát is megtalálod!</p>
         </div>
-        <input type="range" min="0" max="100" step="1" value="50" name="" id="csuszkaId">
-        <div class="arEsGombDiv">
-            <button id="FilterGombDiv">FILTER</button>
-            <div id="PriceDiv">
-                <p>Price:</p>
-                <p id="MinErtekId"> $0 </p>
-                <p> - </p>
-                <p id="MaxErtekId"> $100 </p>
-            </div>
-        </div>
-        <div class="kategoriaSzuroDiv">
-            <h2>Product categories</h2>
-            <ul id="szuzoKategoriakOl">
-                <li><a href="" class="SzuroAnchor">Accessories</a></li>
-                <li><a href="" class="SzuroAnchor">Casual</a></li>
-                <li><a href="" class="SzuroAnchor">Clothing</a></li>
-                <li><a href="" class="SzuroAnchor">Men</a></li>
-                <li><a href="" class="SzuroAnchor">Women</a></li>
-            </ul>
-        </div>
-        <div class="topRatedSzuroDiv">
-            <h2>Top rated products</h2>
-            <ul id="TopKategoriakUl">
-                <img src="./Weboldal képek/JeansJacket.jpeg" class="TopKep" alt="" srcset="">
-                <li><a href="" class="TopAnchor">Jean Jacket</a></li>
-                <p>$59.00</p>
-                <img src="./Weboldal képek/BlackShorts.jpg" class="TopKep" alt="" srcset="">
-                <li><a href="" class="TopAnchor">Black Shorts</a></li>
-                <p>$25.00</p>
-                <img src="./Weboldal képek/LeatherJacket.jpg" class="TopKep" alt="" srcset="">
-                <li><a href="" class="TopAnchor">Leather Jacket</a></li>
-                <p>$100.00 $50.00</p>
-                <img src="./Weboldal képek/WomenTops.jpg" class="TopKep" alt="" srcset="">
-                <li><a href="" class="TopAnchor">Women Tops</a></li>
-                <p>$45.00</p>
-                <img src="./Weboldal képek/CollarTShirt.jpg" class="TopKep" alt="" srcset="">
-                <li><a href="" class="TopAnchor">Collar T-Shirt</a></li>
-                <p>$35.00</p>
-            </ul>
+        <div class="foMenu">
+            <a href="./HTML/home.html" class="menuLinks">home</a>
+            <a href="./index.html" class="menuLinks">shop<span class="menuNyil">▾</span></a>
+            <a href="./HTML/myaccount.html" class="menuLinks">my account<span class="menuNyil">▾</span></a>
+            <a href="./HTML/blog.html" class="menuLinks">blog</a>
+            <a href="./HTML/contact.html" class="menuLinks">contact</a>
         </div>
     </div>
 
+    <div class="route">
+        <p>Home/Románia/Nincstalalat</p>
+    </div>
+
+    <div class="container">
+        <div class="bal">
+            <div class="cim">
+                <h2>Casual</h2>
+            </div>
+            <div class="alatta">
+                <p id="result">Showing all 6 results</p>
+                <div class="select">
+                    <select name="sorting" id="default-sorting">
+                        <option value="">Default sorting</option>
+                        <option value="low">Price: Low to High</option>
+                        <option value="high">Price: High to Low</option>
+                    </select>
+                </div>
+            </div>
+            <div class="row">
+                <div class="kartyak">
+                    <div class="column">
+                        <div class="card">
+                            <img src="./collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
+                            <h1>Collar T-Shirt</h1>
+                            <p class="price">$35.00</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="kartyak">
+                    <div class="column">
+                        <div class="card">
+                            <img src="./collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
+                            <h1>Gents T-shirt</h1>
+                            <p class="price">$35.00</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="kartyak">
+                    <div class="column">
+                        <div class="card">
+                            <img src="./collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
+                            <h1>Ladies Hat</h1>
+                            <p class="price">$35.00</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="kartyak">
+                    <div class="column">
+                        <div class="card">
+                            <img src="./collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
+                            <h1>Collar T-Shirt</h1>
+                            <p class="price">$35.00</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="kartyak">
+                    <div class="column">
+                        <div class="card">
+                            <img src="./collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
+                            <h1>Collar T-Shirt</h1>
+                            <p class="price">$35.00</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="kartyak">
+                    <div class="column">
+                        <div class="card">
+                            <img src="./collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
+                            <h1>Collar T-Shirt</h1>
+                            <p class="price">$35.00</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="jobb">
+            <div class="szuroDiv">
+                <div class="csuszkaSzuroDiv">
+                    <h2>Filter by price</h2>
+                </div>
+                <input type="range" min="0" max="100" step="1" value="50" name="" id="csuszkaId">
+                <div class="arEsGombDiv">
+                    <button id="FilterGombDiv">FILTER</button>
+                    <div id="PriceDiv">
+                        <p>Price:</p>
+                        <p id="MinErtekId"> $0 </p>
+                        <p> - </p>
+                        <p id="MaxErtekId"> $100 </p>
+                    </div>
+                </div>
+                <div class="kategoriaSzuroDiv">
+                    <h2>Product categories</h2>
+                    <ul id="szuzoKategoriakOl">
+                        <li><a href="" class="SzuroAnchor">Accessories</a></li>
+                        <li><a href="" class="SzuroAnchor">Casual</a></li>
+                        <li><a href="" class="SzuroAnchor">Clothing</a></li>
+                        <li><a href="" class="SzuroAnchor">Men</a></li>
+                        <li><a href="" class="SzuroAnchor">Women</a></li>
+                    </ul>
+                </div>
+                <div class="topRatedSzuroDiv">
+                    <h2>Top rated products</h2>
+                    <ul id="TopKategoriakUl">
+                        <img src="./Weboldal képek/JeansJacket.jpeg" class="TopKep" alt="" srcset="">
+                        <li><a href="" class="TopAnchor">Jean Jacket</a></li>
+                        <p>$59.00</p>
+                        <img src="./Weboldal képek/BlackShorts.jpg" class="TopKep" alt="" srcset="">
+                        <li><a href="" class="TopAnchor">Black Shorts</a></li>
+                        <p>$25.00</p>
+                        <img src="./Weboldal képek/LeatherJacket.jpg" class="TopKep" alt="" srcset="">
+                        <li><a href="" class="TopAnchor">Leather Jacket</a></li>
+                        <p>$100.00 $50.00</p>
+                        <img src="./Weboldal képek/WomenTops.jpg" class="TopKep" alt="" srcset="">
+                        <li><a href="" class="TopAnchor">Women Tops</a></li>
+                        <p>$45.00</p>
+                        <img src="./Weboldal képek/CollarTShirt.jpg" class="TopKep" alt="" srcset="">
+                        <li><a href="" class="TopAnchor">Collar T-Shirt</a></li>
+                        <p>$35.00</p>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
