--- a/kartyak.html
+++ b/kartyak.html
@@ -20,7 +20,7 @@
             <a href="./index.html" class="menuLinks">shop<span class="menuNyil">▾</span></a>
             <a href="./HTML/myaccount.html" class="menuLinks">my account<span class="menuNyil">▾</span></a>
             <a href="./HTML/blog.html" class="menuLinks">blog</a>
-            <a href="./HTML/contact.html" class="menuLinks">contact</a>
+            <a href="./HTML/contact.html" class="menuLinks">contact us</a>
         </div>
     </div>
 
@@ -37,7 +37,7 @@
                 <p id="result">Showing all 6 results</p>
                 <div class="select">
                     <select name="sorting" id="default-sorting">
-                        <option value="">Default sorting</option>
+                        <option value="def">Default sorting</option>
                         <option value="low">Price: Low to High</option>
                         <option value="high">Price: High to Low</option>
                     </select>
@@ -47,7 +47,7 @@
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
-                            <img src="./collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
+                            <img src="./ruhakepek/collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
                             <h1>Collar T-Shirt</h1>
                             <p class="price">$35.00</p>
                         </div>
@@ -56,7 +56,7 @@
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
-                            <img src="./collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
+                            <img src="./ruhakepek/gentstshirt.png" alt="Collar T-Shirt" style="width:100%">
                             <h1>Gents T-shirt</h1>
                             <p class="price">$35.00</p>
                         </div>
@@ -65,36 +65,36 @@
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
-                            <img src="./collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
+                            <img src="./ruhakepek/ladieshat.png" alt="Collar T-Shirt" style="width:100%">
                             <h1>Ladies Hat</h1>
-                            <p class="price">$35.00</p>
+                            <p class="price">$17.00</p>
                         </div>
                     </div>
                 </div>
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
-                            <img src="./collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
-                            <h1>Collar T-Shirt</h1>
-                            <p class="price">$35.00</p>
+                            <img src="./ruhakepek/collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
+                            <h1>Leather Jacket</h1>
+                            <p class="price">$50.00</p>
                         </div>
                     </div>
                 </div>
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
-                            <img src="./collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
-                            <h1>Collar T-Shirt</h1>
-                            <p class="price">$35.00</p>
+                            <img src="./ruhakepek/collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
+                            <h1>Printed Tops</h1>
+                            <p class="price">$75.00</p>
                         </div>
                     </div>
                 </div>
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
-                            <img src="./collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
-                            <h1>Collar T-Shirt</h1>
-                            <p class="price">$35.00</p>
+                            <img src="./ruhakepek/collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
+                            <h1>Women tops</h1>
+                            <p class="price">$45.00</p>
                         </div>
                     </div>
                 </div>
