--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
-
     <title>Shop</title>
 </head>
 <body>
@@ -22,11 +21,31 @@
         <div class="foMenu">
             <a href="./HTML/home.html" class="menuLinks">home</a>
             <a href="./index.html" class="menuLinks">shop<span class="menuNyil">▾</span></a>
-            <a href="./HTML/myaccount.html" class="menuLinks">my account<span class="menuNyil">▾</span></a>
+
+
+            <div class="dropdown">
+            <a href="./HTML/myaccount.html" class="menuLinks" id="dropbtn">my account<span class="menuNyil">▾</span></a>
+                <div class="dropdownMain">
+                    <a href="./HTML/myaccount.html" class="dropdownLinks">Account details</a>
+                    <a href="./HTML/myaccount.html" class="dropdownLinks">Log out</a>
+                    <a href="./HTML/myaccount.html" class="dropdownLinks">Coupons</a>
+                </div>
+            </div>
+            
+
+
             <a href="./HTML/blog.html" class="menuLinks">blog</a>
             <a href="./HTML/contact.html" class="menuLinks">contact</a>
 
-            <!--Dropdown itt lesz-->
+            <!--Dropdown itt
+        <div class="hambi">
+            <a href="./HTML/home.html" class="menuLinks">home</a>
+            <a href="./index.html" class="menuLinks">shop<span class="menuNyil">▾</span></a>
+            <a href="./HTML/myaccount.html" class="menuLinks">my account<span class="menuNyil">▾</span></a>
+            <a href="./HTML/blog.html" class="menuLinks">blog</a>
+            <a href="./HTML/contact.html" class="menuLinks">contact</a>
+        </div>-->
+
         </div>
     </div>
 
