IK-14 Shop és Account dropdown elkészítése

--- a/index.html
+++ b/index.html
@@ -20,31 +20,36 @@
 
         <div class="foMenu">
             <a href="./HTML/home.html" class="menuLinks">home</a>
-            <a href="./index.html" class="menuLinks">shop<span class="menuNyil">▾</span></a>
 
+                        
+            <div class="dropdown">
+                <a href="./HTML/home.html" class="menuLinks" id="dropbtn">shop<span class="menuNyil">▾</span></a>
+                    <div class="dropdownMain">
+                        <a href="./HTML/myaccount.html" class="dropdownLinks">All</a>
+                        <a href="./HTML/myaccount.html" class="dropdownLinks">Sales</a>
+                        <a href="./HTML/myaccount.html" class="dropdownLinks">Male</a>
+                        <a href="./HTML/myaccount.html" class="dropdownLinks">Female</a>
+                        <a href="./HTML/myaccount.html" class="dropdownLinks">Kids</a>
+
+
+                    </div>
+            </div>
 
             <div class="dropdown">
-            <a href="./HTML/myaccount.html" class="menuLinks" id="dropbtn">my account<span class="menuNyil">▾</span></a>
+            <p class="menuLinks" id="dropbtn">my account<span class="menuNyil">▾</span></p>
                 <div class="dropdownMain">
                     <a href="./HTML/myaccount.html" class="dropdownLinks">Account details</a>
                     <a href="./HTML/myaccount.html" class="dropdownLinks">Log out</a>
                     <a href="./HTML/myaccount.html" class="dropdownLinks">Coupons</a>
                 </div>
             </div>
-            
+
 
 
             <a href="./HTML/blog.html" class="menuLinks">blog</a>
             <a href="./HTML/contact.html" class="menuLinks">contact</a>
 
-            <!--Dropdown itt
-        <div class="hambi">
-            <a href="./HTML/home.html" class="menuLinks">home</a>
-            <a href="./index.html" class="menuLinks">shop<span class="menuNyil">▾</span></a>
-            <a href="./HTML/myaccount.html" class="menuLinks">my account<span class="menuNyil">▾</span></a>
-            <a href="./HTML/blog.html" class="menuLinks">blog</a>
-            <a href="./HTML/contact.html" class="menuLinks">contact</a>
-        </div>-->
+            <!--Dropdown itt-->
 
         </div>
     </div>
