IK-14 Vissza gomb és footer formázás

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <!--Menü és felsőléc-->
+    <a href="" id="top"></a>
     <div class="felsoLec">
         <div class="webName">
             <p class="oldalnev">Csudajó Áruház</p>
@@ -222,7 +223,11 @@
             <p class="footDivTeto"> <img src="" alt="">Money Back Guarantee</p>
             <p class="contact"> <img src="" alt="">100% money back guarantee</p>
 
+
         </div>
+
+        <button onclick="window.location.href='#top'" class="visszaBTN">↑</button>
+
     </footer>
 
 <script src="./main.js"></script>
