Helyesírási hibák javítása

--- a/szurok.html
+++ b/szurok.html
@@ -149,7 +149,7 @@
                     <h2>Top rated products</h2>
                     <ul id="TopKategoriakUl">
                         <img src="./Weboldal képek/JeansJacket.jpeg" class="TopKep" alt="" srcset="">
-                        <li><a href="" class="TopAnchor">Jean Jacket</a></li>
+                        <li><a href="" class="TopAnchor">Jeans Jacket</a></li>
                         <p>$59.00</p>
                         <img src="./Weboldal képek/BlackShorts.jpg" class="TopKep" alt="" srcset="">
                         <li><a href="" class="TopAnchor">Black Shorts</a></li>
