--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
-                            <img src="./collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
+                            <img src="./ruhakepek/collarshirt.webp" alt="Collar T-Shirt" style="width:100%; height:33vh">
                             <h1>Collar T-Shirt</h1>
                             <p class="price">$35.00</p>
                         </div>
@@ -87,7 +87,7 @@
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
-                            <img src="./collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
+                            <img src="./ruhakepek/gentstshirt.png" alt="Collar T-Shirt" style="width:100%; height:33vh">
                             <h1>Gents T-shirt</h1>
                             <p class="price">$35.00</p>
                         </div>
@@ -96,7 +96,7 @@
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
-                            <img src="./collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
+                            <img src="./ruhakepek/ladieshat.png" alt="Collar T-Shirt" style="width:100%; height:33vh">
                             <h1>Ladies Hat</h1>
                             <p class="price">$35.00</p>
                         </div>
@@ -105,7 +105,7 @@
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
-                            <img src="./collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
+                            <img src="./ruhakepek/collarshirt.webp" alt="Collar T-Shirt" style="width:100%; height:33vh">
                             <h1>Collar T-Shirt</h1>
                             <p class="price">$35.00</p>
                         </div>
@@ -114,7 +114,7 @@
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
-                            <img src="./collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
+                            <img src="./ruhakepek/gentstshirt.png" alt="Collar T-Shirt" style="width:100%; height:33vh">
                             <h1>Collar T-Shirt</h1>
                             <p class="price">$35.00</p>
                         </div>
@@ -123,7 +123,7 @@
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
-                            <img src="./collarshirt.webp" alt="Collar T-Shirt" style="width:100%">
+                            <img src="./ruhakepek/ladieshat.png" alt="Collar T-Shirt" style="width:100%; height:33vh">
                             <h1>Collar T-Shirt</h1>
                             <p class="price">$35.00</p>
                         </div>
