--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
-                            <img src="./ruhakepek/gentstshirt.png" alt="Collar T-Shirt" style="width:100%; height:33vh">
+                            <img src="./ruhakepek/gentstshirt.png" alt="gentstshirt" style="width:100%; height:33vh">
                             <h1>Gents T-shirt</h1>
                             <p class="price">$35.00</p>
                         </div>
@@ -96,7 +96,7 @@
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
-                            <img src="./ruhakepek/ladieshat.png" alt="Collar T-Shirt" style="width:100%; height:33vh">
+                            <img src="./ruhakepek/ladieshat.png" alt="ladieshat" style="width:100%; height:33vh">
                             <h1>Ladies Hat</h1>
                             <p class="price">$35.00</p>
                         </div>
@@ -105,8 +105,8 @@
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
-                            <img src="./ruhakepek/collarshirt.webp" alt="Collar T-Shirt" style="width:100%; height:33vh">
-                            <h1>Collar T-Shirt</h1>
+                            <img src="./ruhakepek/leatherjacket.png" alt="leatherjacket" style="width:100%; height:33vh">
+                            <h1>Leather Jacket</h1>
                             <p class="price">$35.00</p>
                         </div>
                     </div>
@@ -114,8 +114,8 @@
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
-                            <img src="./ruhakepek/gentstshirt.png" alt="Collar T-Shirt" style="width:100%; height:33vh">
-                            <h1>Collar T-Shirt</h1>
+                            <img src="./ruhakepek/printedtops.png" alt="printedtops" style="width:100%; height:33vh">
+                            <h1>Printed Tops</h1>
                             <p class="price">$35.00</p>
                         </div>
                     </div>
@@ -123,8 +123,8 @@
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
-                            <img src="./ruhakepek/ladieshat.png" alt="Collar T-Shirt" style="width:100%; height:33vh">
-                            <h1>Collar T-Shirt</h1>
+                            <img src="./ruhakepek/womentops.jpg" alt="womentops" style="width:100%; height:33vh">
+                            <h1>Women Tops</h1>
                             <p class="price">$35.00</p>
                         </div>
                     </div>
