Akció megcsinálására, és szuroterv CSS linkelése index.html-re

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="szuroterv.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -187,7 +188,7 @@
                         <p>$25.00</p>
                         <img src="./Weboldal képek/LeatherJacket.jpg" class="TopKep" alt="" srcset="">
                         <li><a href="" class="TopAnchor">Leather Jacket</a></li>
-                        <p>$100.00 $50.00</p>
+                        <p><s class="AkcioS">$100.00</s><s class="Akciozott">$50.00</s></p>
                         <img src="./Weboldal képek/WomenTops.jpg" class="TopKep" alt="" srcset="">
                         <li><a href="" class="TopAnchor">Women Tops</a></li>
                         <p>$45.00</p>
