--- a/szurok.html
+++ b/szurok.html
@@ -156,7 +156,7 @@
                         <p>$25.00</p>
                         <img src="./Weboldal képek/LeatherJacket.jpg" class="TopKep" alt="" srcset="">
                         <li><a href="" class="TopAnchor">Leather Jacket</a></li>
-                        <p>$100.00 $50.00</p>
+                        <p><s class="AkcioS">$100.00</s> $50.00</p>
                         <img src="./Weboldal képek/WomenTops.jpg" class="TopKep" alt="" srcset="">
                         <li><a href="" class="TopAnchor">Women Tops</a></li>
                         <p>$45.00</p>
