Kártyák folytatása, képek beillesztése, reszponzivabb, container méretezés

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
-                            <img src="./ruhakepek/collarshirt.webp" alt="Collar T-Shirt" style="width:100%; height:33vh">
+                            <img src="./TermekKartyak/pulcsinigger.jpg" alt="Collar T-Shirt" style="width:100%; height:25vh">
                             <h1>Collar T-Shirt</h1>
                             <p class="price">$35.00</p>
                         </div>
@@ -88,7 +88,7 @@
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
-                            <img src="./ruhakepek/gentstshirt.png" alt="gentstshirt" style="width:100%; height:33vh">
+                            <img src="./TermekKartyak/polonigger.jpg" alt="gentstshirt" style="width:100%; height:25vh">
                             <h1>Gents T-shirt</h1>
                             <p class="price">$35.00</p>
                         </div>
@@ -97,7 +97,7 @@
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
-                            <img src="./ruhakepek/ladieshat.png" alt="ladieshat" style="width:100%; height:33vh">
+                            <img src="./TermekKartyak/sapkasarga.jpg" alt="ladieshat" style="width:100%; height:25vh">
                             <h1>Ladies Hat</h1>
                             <p class="price">$35.00</p>
                         </div>
@@ -106,7 +106,7 @@
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
-                            <img src="./ruhakepek/leatherjacket.png" alt="leatherjacket" style="width:100%; height:33vh">
+                            <img src="./ruhakepek/leatherjacket.png" alt="leatherjacket" style="width:100%; height:25vh">
                             <h1>Leather Jacket</h1>
                             <p class="price">$35.00</p>
                         </div>
@@ -115,7 +115,7 @@
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
-                            <img src="./ruhakepek/printedtops.png" alt="printedtops" style="width:100%; height:33vh">
+                            <img src="./ruhakepek/printedtops.png" alt="printedtops" style="width:100%; height:25vh">
                             <h1>Printed Tops</h1>
                             <p class="price">$35.00</p>
                         </div>
@@ -124,7 +124,7 @@
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
-                            <img src="./ruhakepek/womentops.jpg" alt="womentops" style="width:100%; height:33vh">
+                            <img src="./ruhakepek/womentops.jpg" alt="womentops" style="width:100%; height:25vh">
                             <h1>Women Tops</h1>
                             <p class="price">$35.00</p>
                         </div>
