IK-14 Menü javítása minta alapján

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             <div class="dropdown">
                 <a href="./HTML/home.html" class="menuLinks" id="dropbtn">shop<span class="menuNyil">▾</span></a>
                     <div class="dropdownMain">
-                        <a href="./HTML/myaccount.html" class="dropdownLinks">All</a>
-                        <a href="./HTML/myaccount.html" class="dropdownLinks">Sales</a>
-                        <a href="./HTML/myaccount.html" class="dropdownLinks">Male</a>
-                        <a href="./HTML/myaccount.html" class="dropdownLinks">Female</a>
-                        <a href="./HTML/myaccount.html" class="dropdownLinks">Kids</a>
+                        <a href="./HTML/myaccount.html" class="dropdownLinks">all</a>
+                        <a href="./HTML/myaccount.html" class="dropdownLinks">sales</a>
+                        <a href="./HTML/myaccount.html" class="dropdownLinks">male</a>
+                        <a href="./HTML/myaccount.html" class="dropdownLinks">female</a>
+                        <a href="./HTML/myaccount.html" class="dropdownLinks">kids</a>
 
 
                     </div>
