--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
             <a href="./HTML/blog.html" class="menuLinks">blog</a>
-            <a href="./HTML/contact.html" class="menuLinks">contact</a>
+            <a href="./HTML/contact.html" class="menuLinks">contact us</a>
 
             <!--Dropdown itt-->
 
@@ -208,13 +208,13 @@
     <footer>
         <div class="footDivBal">
             <p class="footDivTeto">About</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium optio obcaecati, nostrum nulla nihil alias error reprehenderit earum commodi quae eos, quasi iusto. Maiores quasi iusto. Maiore</p>
+            <p>Our shop was founded 10 years ago. We offer a curated collection of stylish, high-quality clothing that blends comfort with modern trends, making it easy for you to express your unique style. </p>
         </div>
         <div class="footDivKoz">
             <p class="footDivTeto">Contact Us</p>
-            <p class="contact"> <img src="./Weboldal képek/emailIcon.png" alt="email" class="contactKepek"> kjfhljhvcrd@gmail.gov.ru</p>
-            <p class="contact"> <img src="./Weboldal képek/emailIcon.png" alt="email" class="contactKepek"> kjfhljhvcrd@gmail.gov.ru</p>
-            <p class="contact"> <img src="./Weboldal képek/emailIcon.png" alt="email" class="contactKepek"> kjfhljhvcrd@gmail.gov.ru</p>
+            <p class="contact"> <img src="./Weboldal képek/emailIcon.png" alt="email" class="contactKepek"> csudajoshop@gmail.com</p>
+            <p class="contact"> <img src="./Weboldal képek/emailIcon.png" alt="email" class="contactKepek"> info@csudajoshop.com</p>
+            <p class="contact"> <img src="./Weboldal képek/emailIcon.png" alt="email" class="contactKepek"> support@csudajoshop.com</p>
         </div>
         <div class="footDivJobb">
             
