--- a/index.html
+++ b/index.html
@@ -80,8 +80,10 @@
                     <div class="column">
                         <div class="card">
                             <img src="./TermekKartyak/pulcsinigger.jpg" alt="Collar T-Shirt" style="width:100%; height:25vh">
-                            <h1>Collar T-Shirt</h1>
+                            <div class="alja">
+                                <h1>Collar T-Shirt</h1>
                             <p class="price">$35.00</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -89,8 +91,10 @@
                     <div class="column">
                         <div class="card">
                             <img src="./TermekKartyak/polonigger.jpg" alt="gentstshirt" style="width:100%; height:25vh">
-                            <h1>Gents T-shirt</h1>
-                            <p class="price">$35.00</p>
+                            <div class="alja">
+                                <h1>Gents T-shirt</h1>
+                                <p class="price">$49.00</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -98,8 +102,9 @@
                     <div class="column">
                         <div class="card">
                             <img src="./TermekKartyak/sapkasarga.jpg" alt="ladieshat" style="width:100%; height:25vh">
-                            <h1>Ladies Hat</h1>
-                            <p class="price">$35.00</p>
+                            <div class="alja">
+                                <h1>Ladies Hat</h1>
+                                <p class="price"><s id="athuzott">$22.00</s>$17.00</p></div>
                         </div>
                     </div>
                 </div>
@@ -107,8 +112,10 @@
                     <div class="column">
                         <div class="card">
                             <img src="./ruhakepek/leatherjacket.png" alt="leatherjacket" style="width:100%; height:25vh">
-                            <h1>Leather Jacket</h1>
-                            <p class="price">$35.00</p>
+                            <div class="alja">
+                                <h1>Leather Jacket</h1>
+                                <p class="price"><s id="athuzott">$100.00</s>$50.00</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -116,8 +123,10 @@
                     <div class="column">
                         <div class="card">
                             <img src="./ruhakepek/printedtops.png" alt="printedtops" style="width:100%; height:25vh">
-                            <h1>Printed Tops</h1>
-                            <p class="price">$35.00</p>
+                            <div class="alja">
+                                <h1>Printed Tops</h1>
+                            <p class="price">$75.00</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -125,8 +134,10 @@
                     <div class="column">
                         <div class="card">
                             <img src="./ruhakepek/womentops.jpg" alt="womentops" style="width:100%; height:25vh">
-                            <h1>Women Tops</h1>
-                            <p class="price">$35.00</p>
+                            <div class="alja">
+                                <h1>Women Tops</h1>
+                            <p class="price">$45.00</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -188,7 +199,7 @@
                         <p>$25.00</p>
                         <img src="./Weboldal képek/LeatherJacket.jpg" class="TopKep" alt="" srcset="">
                         <li><a href="" class="TopAnchor">Leather Jacket</a></li>
-                        <p><s class="AkcioS">$100.00</s><s class="Akciozott">$50.00</s></p>
+                        <p><s id="athuzott" class="AkcioS">$100.00</s id="athuzott"><s id="athuzott" class="Akciozott">$50.00</s id="athuzott"></p>
                         <img src="./Weboldal képek/WomenTops.jpg" class="TopKep" alt="" srcset="">
                         <li><a href="" class="TopAnchor">Women Tops</a></li>
                         <p>$45.00</p>
