IK-14 Footer befejezése asztali nézetben

--- a/index.html
+++ b/index.html
@@ -212,16 +212,16 @@
         </div>
         <div class="footDivKoz">
             <p class="footDivTeto">Contact Us</p>
-            <p class="contact"> <img src="./Weboldal képek/emailIcon.png" alt="email" class="contactKepek"> csudajoshop@gmail.com</p>
+            <p class="contact"> <img src="./Weboldal képek/hazikoIcon.webp" alt="email" class="contactKepek"> csudajoshop@gmail.com</p>
             <p class="contact"> <img src="./Weboldal képek/emailIcon.png" alt="email" class="contactKepek"> info@csudajoshop.com</p>
-            <p class="contact"> <img src="./Weboldal képek/emailIcon.png" alt="email" class="contactKepek"> support@csudajoshop.com</p>
+            <p class="contact"> <img src="./Weboldal képek/teloIcon.png" alt="email" class="contactKepek"> support@csudajoshop.com</p>
         </div>
         <div class="footDivJobb">
             
-            <p class="footDivTeto"> <img src="" alt="">Free Shipping & Return</p>
-            <p class="contact"> <img src="" alt="">Free shipping above $99</p>
+            <p class="footDivTeto"> <img src="./Weboldal képek/returnIcon.png" alt="email" class="contactKepek">Free Shipping & Return</p>
+            <p class="contact">Free shipping above $99</p>
 
-            <p class="footDivTeto"> <img src="" alt="">Money Back Guarantee</p>
+            <p class="footDivTeto"> <img src="./Weboldal képek/walletIcon.webp" alt="email" class="contactKepek">Money Back Guarantee</p>
             <p class="contact"> <img src="" alt="">100% money back guarantee</p>
 
 
