A kártyák elrendezésének javítása más felbontásban

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <div class="card">
                             <img src="./ruhakepek/leatherjacket.png" alt="leatherjacket" style="width:100%; height:25vh">
                             <div class="alja">
-                                <h1>Leather Jacket</h1>
+                                <h1 id="LeatherJ">Leather Jacket</h1>
                                 <p class="price"><s id="athuzott">$100.00</s>$50.00</p>
                             </div>
                         </div>
