Kártyák teljesen újratervezése, képek beillesztése a weboldalra, formázása, szurotervben a szöveget lejjebb vettem.

--- a/index.html
+++ b/index.html
@@ -63,83 +63,51 @@
     <!--Baloldal, Jobboldal-->
     <div class="main">
         <div class="bal">
-            <div class="cim">
-                <h2>Casual</h2>
+            
+                <div class="cim">
+                    <h2>Casual</h2>
+                </div>
+                <div class="fent">
+                    <p id="result">Showing all 6 results</p>
+                    <div class="select">
+                        <select name="sorting" id="default-sorting">
+                            <option value="">Default sorting</option>
+                            <option value="low">Price: Low to High</option>
+                            <option value="high">Price: High to Low</option>
+                        </select>
+                    </div>
             </div>
-            <div class="alatta">
-                <p id="result">Showing all 6 results</p>
-                <div class="select">
-                    <select name="sorting" id="default-sorting">
-                        <option value="">Default sorting</option>
-                        <option value="low">Price: Low to High</option>
-                        <option value="high">Price: High to Low</option>
-                    </select>
-                </div>
-            </div>
-            <div class="row">
-                <div class="kartyak">
-                    <div class="column">
-                        <div class="card">
-                            <img src="./TermekKartyak/pulcsinigger.jpg" alt="Collar T-Shirt" style="width:100%; height:25vh">
-                            <div class="alja">
-                                <h1>Collar T-Shirt</h1>
-                            <p class="price">$35.00</p>
-                            </div>
-                        </div>
+                <div class="product-container">
+                <div class="row">
+                    <div class="card">
+                        <img src="./TermekKartyak/collartshirtfeher .png" alt="Collar T-Shirt">
+                        <h1>Collar T-Shirt</h1>
+                        <p class="price">$35.00</p>
                     </div>
-                </div>
-                <div class="kartyak">
-                    <div class="column">
-                        <div class="card">
-                            <img src="./TermekKartyak/polonigger.jpg" alt="gentstshirt" style="width:100%; height:25vh">
-                            <div class="alja">
-                                <h1>Gents T-shirt</h1>
-                                <p class="price">$49.00</p>
-                            </div>
-                        </div>
+                    <div class="card">
+                        <img src="./TermekKartyak/polonigger.jpg" alt="Gents T-shirt">
+                        <h1>Gents T-shirt</h1>
+                        <p class="price">$49.00</p>
                     </div>
-                </div>
-                <div class="kartyak">
-                    <div class="column">
-                        <div class="card">
-                            <img src="./TermekKartyak/sapkasarga.jpg" alt="ladieshat" style="width:100%; height:25vh">
-                            <div class="alja">
-                                <h1>Ladies Hat</h1>
-                                <p class="price"><s id="athuzott">$22.00</s>$17.00</p></div>
-                        </div>
+                    <div class="card">
+                        <img src="./TermekKartyak/sapkasarga.jpg" alt="Ladies Hat">
+                        <h1>Ladies Hat</h1>
+                        <p class="price"><s>$22.00</s>$17.00</p>
                     </div>
-                </div>
-                <div class="kartyak">
-                    <div class="column">
-                        <div class="card">
-                            <img src="./ruhakepek/leatherjacket.png" alt="leatherjacket" style="width:100%; height:25vh">
-                            <div class="alja">
-                                <h1 id="LeatherJ">Leather Jacket</h1>
-                                <p class="price"><s id="athuzott">$100.00</s>$50.00</p>
-                            </div>
-                        </div>
+                    <div class="card">
+                        <img src="./TermekKartyak/kabatnigger.jpg" alt="Leather Jacket">
+                        <h1>Leather Jacket</h1>
+                        <p class="price"><s>$100.00</s>$50.00</p>
                     </div>
-                </div>
-                <div class="kartyak">
-                    <div class="column">
-                        <div class="card">
-                            <img src="./ruhakepek/printedtops.png" alt="printedtops" style="width:100%; height:25vh">
-                            <div class="alja">
-                                <h1>Printed Tops</h1>
-                            <p class="price">$75.00</p>
-                            </div>
-                        </div>
+                    <div class="card">
+                        <img src="./TermekKartyak/PrintedTops.jpg" alt="Printed Tops">
+                        <h1>Printed Tops</h1>
+                        <p class="price">$75.00</p>
                     </div>
-                </div>
-                <div class="kartyak">
-                    <div class="column">
-                        <div class="card">
-                            <img src="./ruhakepek/womentops.jpg" alt="womentops" style="width:100%; height:25vh">
-                            <div class="alja">
-                                <h1>Women Tops</h1>
-                            <p class="price">$45.00</p>
-                            </div>
-                        </div>
+                    <div class="card">
+                        <img src="./TermekKartyak/keknigger.jpg" alt="Women Tops">
+                        <h1>Women Tops</h1>
+                        <p class="price">$45.00</p>
                     </div>
                 </div>
             </div>
@@ -193,7 +161,7 @@
                     <h2>Top rated products</h2>
                     <ul id="TopKategoriakUl">
                         <img src="./Weboldal képek/JeansJacket.jpeg" class="TopKep" alt="" srcset="">
-                        <li><a href="" class="TopAnchor">Jean Jacket</a></li>
+                        <li><a href="" class="TopAnchor">Jeans Jacket</a></li>
                         <p>$59.00</p>
                         <img src="./Weboldal képek/BlackShorts.jpg" class="TopKep" alt="" srcset="">
                         <li><a href="" class="TopAnchor">Black Shorts</a></li>
