IK-12 footer és kártyák javítása

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     
                             
                 <div class="dropdown">
-                    <a href="./HTML/home.html" class="menuLinks" id="dropbtn">shop<span class="menuNyil">▾</span></a>
+                    <p href="./HTML/home.html" class="menuLinks" id="dropbtn">shop<span class="menuNyil">▾</span></p>
                         <div class="dropdownMain">
                             <a href="./HTML/myaccount.html" class="dropdownLinks">all</a>
                             <a href="./HTML/myaccount.html" class="dropdownLinks">sales</a>
@@ -80,7 +80,7 @@
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
-                            <img src="./TermekKartyak/pulcsinigger.jpg" alt="Collar T-Shirt" style="width:100%; height:25vh">
+                            <img src="./TermekKartyak/pulcsinigger.jpg" alt="Collar T-Shirt" class="kartyaKepek">
                             <div class="alja">
                                 <h1>Collar T-Shirt</h1>
                             <p class="price">$35.00</p>
@@ -91,7 +91,7 @@
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
-                            <img src="./TermekKartyak/polonigger.jpg" alt="gentstshirt" style="width:100%; height:25vh">
+                            <img src="./TermekKartyak/polonigger.jpg" alt="gentstshirt" class="kartyaKepek">
                             <div class="alja">
                                 <h1>Gents T-shirt</h1>
                                 <p class="price">$49.00</p>
@@ -102,7 +102,7 @@
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
-                            <img src="./TermekKartyak/sapkasarga.jpg" alt="ladieshat" style="width:100%; height:25vh">
+                            <img src="./TermekKartyak/sapkasarga.jpg" alt="ladieshat" class="kartyaKepek">
                             <div class="alja">
                                 <h1>Ladies Hat</h1>
                                 <p class="price"><s id="athuzott">$22.00</s>$17.00</p></div>
@@ -112,7 +112,7 @@
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
-                            <img src="./ruhakepek/leatherjacket.png" alt="leatherjacket" style="width:100%; height:25vh">
+                            <img src="./ruhakepek/leatherjacket.png" alt="leatherjacket" class="kartyaKepek">
                             <div class="alja">
                                 <h1 id="LeatherJ">Leather Jacket</h1>
                                 <p class="price"><s id="athuzott">$100.00</s>$50.00</p>
@@ -123,7 +123,7 @@
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
-                            <img src="./ruhakepek/printedtops.png" alt="printedtops" style="width:100%; height:25vh">
+                            <img src="./ruhakepek/printedtops.png" class="kartyaKepek">
                             <div class="alja">
                                 <h1>Printed Tops</h1>
                             <p class="price">$75.00</p>
@@ -134,7 +134,7 @@
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
-                            <img src="./ruhakepek/womentops.jpg" alt="womentops" style="width:100%; height:25vh">
+                            <img src="./ruhakepek/womentops.jpg" alt="womentops" class="kartyaKepek">
                             <div class="alja">
                                 <h1>Women Tops</h1>
                             <p class="price">$45.00</p>
